# course

./: .gitignore  alembic.ini  pyproject.toml
app/: __init__.py  main.py  models.py  settings.py
app/api/: __init__.py  journal.py  lesson.py  mark.py  render.py  student.py  teacher.py  user.py
app/auth/: auth.py
app/database/: postreges.py
app/enums/: role.py
app/migrations/: env.py
app/migrations/versions/: 2024_06_06_1549-daeee8c56a0a_create_tables.py  2024_06_06_1630-9f27ad51d81c_date_to_journal.py  2024_06_06_2010-e013b0736775_create_tables.py  2024_06_06_2121-052c6c408536_student.py  2024_06_06_2122-509e080a192d_student.py
app/schemas/: lesson.py  mark.py  student.py  teacher.py  user.py
app/static/: styles.css
app/templates/: base.html  index.html  journal.html
